# jellyfin-cli

./: Cargo.toml
src/: api.rs  config.rs  display.rs  main.rs
