[package]
name = "jellyfin-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
dirs = "6"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
